movies-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-service
spec:
  type: NodePort
  selector:
    app: movies-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
